--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ header {
   background-image: url("../assets/banner/banner.png");
   background-repeat: no-repeat;
   background-position: center;
-  background-size: contain;
+  background-size: cover;
 }
 
 .banner-container {
@@ -54,10 +54,61 @@ header {
   align-items: flex-end;
   gap: 20px;
   height: 800px;
-  margin: auto 215px;
+  margin: auto 200px;
 }
 .banner-container p {
   text-align: right;
   word-wrap: break-word;
   width: 500px;
+}
+
+.my-failure {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 85px;
+  width: 1074px;
+  margin: 130px auto;
+}
+.my-failure img {
+  width: 100%;
+  height: 100%;
+}
+.my-plan {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  gap: 50px;
+}
+.my-plan-container {
+  display: flex;
+  gap: 85px;
+  margin-bottom: 130px;
+}
+.my-plan-card {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+}
+
+.call-now {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 1140px;
+  margin: 0 auto;
+  padding: 60px;
+  border-radius: 10px;
+  background-image: linear-gradient(
+      90deg,
+      #f15b22 0%,
+      rgba(241, 91, 34, 0) 100%
+    ),
+    url(../assets/watch.png);
+  background-repeat: no-repeat;
+
 }
